samples/_failures_safe/1761318477_9ac58f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f313d42.c: In function ‘main’:
./samples/SAFE/__tmp_5f313d42.c:167:5: error: expected ‘,’ or ‘;’ at end of input
  167 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_5f313d42.c:167:5: error: expected declaration or statement at end of input
